--- a/src/components/ImageList.css
+++ b/src/components/ImageList.css
@@ -2,8 +2,10 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   grid-gap: 10px;
+  grid-auto-rows: 150px;
 }
 
 .image-list img {
   width: 300px;
+  grid-row-end: span 2;
 }
