--- a/src/components/ImageList.css
+++ b/src/components/ImageList.css
@@ -1,8 +1,8 @@
 .image-list {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  grid-gap: 15px;
-  grid-auto-rows: 150px;
+  grid-gap: 0 15px;
+  grid-auto-rows: 15px;
 }
 
 .image-list img {
